app/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> decl_list
Rule 2     expr -> NEW type_spec SLBRAK expr SRBRAK
Rule 3     expr -> FLOAT_LIT
Rule 4     expr -> INT_LIT
Rule 5     expr -> BOOL_LIT
Rule 6     expr -> IDENT POINT SIZE
Rule 7     expr -> IDENT LPAREN args RPAREN
Rule 8     expr -> IDENT SLBRAK expr SRBRAK
Rule 9     expr -> IDENT
Rule 10    expr -> LPAREN expr RPAREN
Rule 11    expr -> expr MOD expr  [precedence=left, level=7]
Rule 12    expr -> expr DIVIDE expr  [precedence=left, level=7]
Rule 13    expr -> expr TIMES expr  [precedence=left, level=7]
Rule 14    expr -> expr MINUS expr  [precedence=left, level=6]
Rule 15    expr -> expr PLUS expr  [precedence=left, level=6]
Rule 16    expr -> expr GT expr  [precedence=left, level=5]
Rule 17    expr -> expr GE expr  [precedence=left, level=5]
Rule 18    expr -> expr LT expr  [precedence=left, level=5]
Rule 19    expr -> expr LE expr  [precedence=left, level=5]
Rule 20    expr -> expr NE expr  [precedence=left, level=4]
Rule 21    expr -> expr EQ expr  [precedence=left, level=4]
Rule 22    expr -> expr AND expr  [precedence=left, level=3]
Rule 23    expr -> expr OR expr  [precedence=left, level=2]
Rule 24    expr -> IDENT SLBRAK expr SRBRAK ASSIGN expr  [precedence=right, level=1]
Rule 25    expr -> IDENT ASSIGN expr  [precedence=right, level=1]
Rule 26    expr -> PLUS expr  [precedence=right, level=8]
Rule 27    expr -> MINUS expr  [precedence=right, level=8]
Rule 28    expr -> NEG expr  [precedence=right, level=8]
Rule 29    decl_list -> decl
Rule 30    decl_list -> decl_list decl
Rule 31    decl -> fun_decl
Rule 32    decl -> var_decl
Rule 33    var_decl -> type_spec IDENT SLBRAK SRBRAK
Rule 34    var_decl -> type_spec IDENT SEMI
Rule 35    type_spec -> FLOAT
Rule 36    type_spec -> INT
Rule 37    type_spec -> BOOL
Rule 38    type_spec -> VOID
Rule 39    fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt
Rule 40    params -> VOID
Rule 41    params -> param_list
Rule 42    param_list -> param
Rule 43    param_list -> param_list COMMA param
Rule 44    param -> type_spec IDENT SLBRAK SRBRAK
Rule 45    param -> type_spec IDENT
Rule 46    compound_stmt -> LBRAK local_decls stmt_list RBRAK
Rule 47    local_decls -> empty
Rule 48    local_decls -> local_decls local_decl
Rule 49    local_decl -> type_spec IDENT SLBRAK SRBRAK SEMI
Rule 50    local_decl -> type_spec IDENT SEMI
Rule 51    stmt_list -> empty
Rule 52    stmt_list -> stmt_list stmt
Rule 53    stmt -> break_stmt
Rule 54    stmt -> return_stmt
Rule 55    stmt -> while_stmt
Rule 56    stmt -> if_stmt
Rule 57    stmt -> compound_stmt
Rule 58    stmt -> expr_stmt
Rule 59    expr_stmt -> SEMI
Rule 60    expr_stmt -> expr SEMI
Rule 61    while_stmt -> WHILE LPAREN expr RPAREN stmt
Rule 62    if_stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 63    if_stmt -> IF LPAREN expr RPAREN stmt
Rule 64    return_stmt -> RETURN expr SEMI
Rule 65    return_stmt -> RETURN SEMI
Rule 66    break_stmt -> BREAK SEMI
Rule 67    arg_list -> expr
Rule 68    arg_list -> arg_list COMMA expr
Rule 69    args -> empty
Rule 70    args -> arg_list
Rule 71    empty -> <empty>

Terminals, with rules where they appear:

AND                  : 22
ASSIGN               : 24 25
BOOL                 : 37
BOOL_LIT             : 5
BREAK                : 66
COMMA                : 43 68
DIVIDE               : 12
ELSE                 : 62
EQ                   : 21
FLOAT                : 35
FLOAT_LIT            : 3
GE                   : 17
GT                   : 16
IDENT                : 6 7 8 9 24 25 33 34 39 44 45 49 50
IF                   : 62 63
INT                  : 36
INT_LIT              : 4
LBRAK                : 46
LE                   : 19
LPAREN               : 7 10 39 61 62 63
LT                   : 18
MINUS                : 14 27
MOD                  : 11
NE                   : 20
NEG                  : 28
NEW                  : 2
OR                   : 23
PLUS                 : 15 26
POINT                : 6
RBRAK                : 46
RETURN               : 64 65
RPAREN               : 7 10 39 61 62 63
SEMI                 : 34 49 50 59 60 64 65 66
SIZE                 : 6
SLBRAK               : 2 8 24 33 44 49
SRBRAK               : 2 8 24 33 44 49
TIMES                : 13
VOID                 : 38 40
WHILE                : 61
error                : 

Nonterminals, with rules where they appear:

arg_list             : 68 70
args                 : 7
break_stmt           : 53
compound_stmt        : 39 57
decl                 : 29 30
decl_list            : 1 30
empty                : 47 51 69
expr                 : 2 8 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 27 28 60 61 62 63 64 67 68
expr_stmt            : 58
fun_decl             : 31
if_stmt              : 56
local_decl           : 48
local_decls          : 46 48
param                : 42 43
param_list           : 41 43
params               : 39
program              : 0
return_stmt          : 54
stmt                 : 52 61 62 62 63
stmt_list            : 46 52
type_spec            : 2 33 34 39 44 45 49 50
var_decl             : 32
while_stmt           : 55


state 0

    (0) S' -> . program
    (1) program -> . decl_list
    (29) decl_list -> . decl
    (30) decl_list -> . decl_list decl
    (31) decl -> . fun_decl
    (32) decl -> . var_decl
    (39) fun_decl -> . type_spec IDENT LPAREN params RPAREN compound_stmt
    (33) var_decl -> . type_spec IDENT SLBRAK SRBRAK
    (34) var_decl -> . type_spec IDENT SEMI
    (35) type_spec -> . FLOAT
    (36) type_spec -> . INT
    (37) type_spec -> . BOOL
    (38) type_spec -> . VOID
    FLOAT           shift and go to state 7
    INT             shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    decl_list                      shift and go to state 2
    decl                           shift and go to state 3
    fun_decl                       shift and go to state 4
    var_decl                       shift and go to state 5
    type_spec                      shift and go to state 6

state 1

    (0) S' -> program .


state 2

    (1) program -> decl_list .
    (30) decl_list -> decl_list . decl
    (31) decl -> . fun_decl
    (32) decl -> . var_decl
    (39) fun_decl -> . type_spec IDENT LPAREN params RPAREN compound_stmt
    (33) var_decl -> . type_spec IDENT SLBRAK SRBRAK
    (34) var_decl -> . type_spec IDENT SEMI
    (35) type_spec -> . FLOAT
    (36) type_spec -> . INT
    (37) type_spec -> . BOOL
    (38) type_spec -> . VOID
    $end            reduce using rule 1 (program -> decl_list .)
    FLOAT           shift and go to state 7
    INT             shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    decl                           shift and go to state 11
    fun_decl                       shift and go to state 4
    var_decl                       shift and go to state 5
    type_spec                      shift and go to state 6

state 3

    (29) decl_list -> decl .
    FLOAT           reduce using rule 29 (decl_list -> decl .)
    INT             reduce using rule 29 (decl_list -> decl .)
    BOOL            reduce using rule 29 (decl_list -> decl .)
    VOID            reduce using rule 29 (decl_list -> decl .)
    $end            reduce using rule 29 (decl_list -> decl .)


state 4

    (31) decl -> fun_decl .
    FLOAT           reduce using rule 31 (decl -> fun_decl .)
    INT             reduce using rule 31 (decl -> fun_decl .)
    BOOL            reduce using rule 31 (decl -> fun_decl .)
    VOID            reduce using rule 31 (decl -> fun_decl .)
    $end            reduce using rule 31 (decl -> fun_decl .)


state 5

    (32) decl -> var_decl .
    FLOAT           reduce using rule 32 (decl -> var_decl .)
    INT             reduce using rule 32 (decl -> var_decl .)
    BOOL            reduce using rule 32 (decl -> var_decl .)
    VOID            reduce using rule 32 (decl -> var_decl .)
    $end            reduce using rule 32 (decl -> var_decl .)


state 6

    (39) fun_decl -> type_spec . IDENT LPAREN params RPAREN compound_stmt
    (33) var_decl -> type_spec . IDENT SLBRAK SRBRAK
    (34) var_decl -> type_spec . IDENT SEMI
    IDENT           shift and go to state 12


state 7

    (35) type_spec -> FLOAT .
    IDENT           reduce using rule 35 (type_spec -> FLOAT .)
    SLBRAK          reduce using rule 35 (type_spec -> FLOAT .)


state 8

    (36) type_spec -> INT .
    IDENT           reduce using rule 36 (type_spec -> INT .)
    SLBRAK          reduce using rule 36 (type_spec -> INT .)


state 9

    (37) type_spec -> BOOL .
    IDENT           reduce using rule 37 (type_spec -> BOOL .)
    SLBRAK          reduce using rule 37 (type_spec -> BOOL .)


state 10

    (38) type_spec -> VOID .
    IDENT           reduce using rule 38 (type_spec -> VOID .)
    SLBRAK          reduce using rule 38 (type_spec -> VOID .)


state 11

    (30) decl_list -> decl_list decl .
    FLOAT           reduce using rule 30 (decl_list -> decl_list decl .)
    INT             reduce using rule 30 (decl_list -> decl_list decl .)
    BOOL            reduce using rule 30 (decl_list -> decl_list decl .)
    VOID            reduce using rule 30 (decl_list -> decl_list decl .)
    $end            reduce using rule 30 (decl_list -> decl_list decl .)


state 12

    (39) fun_decl -> type_spec IDENT . LPAREN params RPAREN compound_stmt
    (33) var_decl -> type_spec IDENT . SLBRAK SRBRAK
    (34) var_decl -> type_spec IDENT . SEMI
    LPAREN          shift and go to state 13
    SLBRAK          shift and go to state 14
    SEMI            shift and go to state 15


state 13

    (39) fun_decl -> type_spec IDENT LPAREN . params RPAREN compound_stmt
    (40) params -> . VOID
    (41) params -> . param_list
    (42) param_list -> . param
    (43) param_list -> . param_list COMMA param
    (44) param -> . type_spec IDENT SLBRAK SRBRAK
    (45) param -> . type_spec IDENT
    (35) type_spec -> . FLOAT
    (36) type_spec -> . INT
    (37) type_spec -> . BOOL
    (38) type_spec -> . VOID
    VOID            shift and go to state 18
    FLOAT           shift and go to state 7
    INT             shift and go to state 8
    BOOL            shift and go to state 9

    type_spec                      shift and go to state 16
    params                         shift and go to state 17
    param_list                     shift and go to state 19
    param                          shift and go to state 20

state 14

    (33) var_decl -> type_spec IDENT SLBRAK . SRBRAK
    SRBRAK          shift and go to state 21


state 15

    (34) var_decl -> type_spec IDENT SEMI .
    FLOAT           reduce using rule 34 (var_decl -> type_spec IDENT SEMI .)
    INT             reduce using rule 34 (var_decl -> type_spec IDENT SEMI .)
    BOOL            reduce using rule 34 (var_decl -> type_spec IDENT SEMI .)
    VOID            reduce using rule 34 (var_decl -> type_spec IDENT SEMI .)
    $end            reduce using rule 34 (var_decl -> type_spec IDENT SEMI .)


state 16

    (44) param -> type_spec . IDENT SLBRAK SRBRAK
    (45) param -> type_spec . IDENT
    IDENT           shift and go to state 22


state 17

    (39) fun_decl -> type_spec IDENT LPAREN params . RPAREN compound_stmt
    RPAREN          shift and go to state 23


state 18

    (40) params -> VOID .
    (38) type_spec -> VOID .
    RPAREN          reduce using rule 40 (params -> VOID .)
    IDENT           reduce using rule 38 (type_spec -> VOID .)


state 19

    (41) params -> param_list .
    (43) param_list -> param_list . COMMA param
    RPAREN          reduce using rule 41 (params -> param_list .)
    COMMA           shift and go to state 24


state 20

    (42) param_list -> param .
    COMMA           reduce using rule 42 (param_list -> param .)
    RPAREN          reduce using rule 42 (param_list -> param .)


state 21

    (33) var_decl -> type_spec IDENT SLBRAK SRBRAK .
    FLOAT           reduce using rule 33 (var_decl -> type_spec IDENT SLBRAK SRBRAK .)
    INT             reduce using rule 33 (var_decl -> type_spec IDENT SLBRAK SRBRAK .)
    BOOL            reduce using rule 33 (var_decl -> type_spec IDENT SLBRAK SRBRAK .)
    VOID            reduce using rule 33 (var_decl -> type_spec IDENT SLBRAK SRBRAK .)
    $end            reduce using rule 33 (var_decl -> type_spec IDENT SLBRAK SRBRAK .)


state 22

    (44) param -> type_spec IDENT . SLBRAK SRBRAK
    (45) param -> type_spec IDENT .
    SLBRAK          shift and go to state 25
    COMMA           reduce using rule 45 (param -> type_spec IDENT .)
    RPAREN          reduce using rule 45 (param -> type_spec IDENT .)


state 23

    (39) fun_decl -> type_spec IDENT LPAREN params RPAREN . compound_stmt
    (46) compound_stmt -> . LBRAK local_decls stmt_list RBRAK
    LBRAK           shift and go to state 27

    compound_stmt                  shift and go to state 26

state 24

    (43) param_list -> param_list COMMA . param
    (44) param -> . type_spec IDENT SLBRAK SRBRAK
    (45) param -> . type_spec IDENT
    (35) type_spec -> . FLOAT
    (36) type_spec -> . INT
    (37) type_spec -> . BOOL
    (38) type_spec -> . VOID
    FLOAT           shift and go to state 7
    INT             shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    param                          shift and go to state 28
    type_spec                      shift and go to state 16

state 25

    (44) param -> type_spec IDENT SLBRAK . SRBRAK
    SRBRAK          shift and go to state 29


state 26

    (39) fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .
    FLOAT           reduce using rule 39 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    INT             reduce using rule 39 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    BOOL            reduce using rule 39 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    VOID            reduce using rule 39 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)
    $end            reduce using rule 39 (fun_decl -> type_spec IDENT LPAREN params RPAREN compound_stmt .)


state 27

    (46) compound_stmt -> LBRAK . local_decls stmt_list RBRAK
    (47) local_decls -> . empty
    (48) local_decls -> . local_decls local_decl
    (71) empty -> .
    FLOAT           reduce using rule 71 (empty -> .)
    INT             reduce using rule 71 (empty -> .)
    BOOL            reduce using rule 71 (empty -> .)
    VOID            reduce using rule 71 (empty -> .)
    RBRAK           reduce using rule 71 (empty -> .)
    BREAK           reduce using rule 71 (empty -> .)
    RETURN          reduce using rule 71 (empty -> .)
    WHILE           reduce using rule 71 (empty -> .)
    IF              reduce using rule 71 (empty -> .)
    LBRAK           reduce using rule 71 (empty -> .)
    SEMI            reduce using rule 71 (empty -> .)
    NEW             reduce using rule 71 (empty -> .)
    FLOAT_LIT       reduce using rule 71 (empty -> .)
    INT_LIT         reduce using rule 71 (empty -> .)
    BOOL_LIT        reduce using rule 71 (empty -> .)
    IDENT           reduce using rule 71 (empty -> .)
    LPAREN          reduce using rule 71 (empty -> .)
    PLUS            reduce using rule 71 (empty -> .)
    MINUS           reduce using rule 71 (empty -> .)
    NEG             reduce using rule 71 (empty -> .)

    local_decls                    shift and go to state 30
    empty                          shift and go to state 31

state 28

    (43) param_list -> param_list COMMA param .
    COMMA           reduce using rule 43 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 43 (param_list -> param_list COMMA param .)


state 29

    (44) param -> type_spec IDENT SLBRAK SRBRAK .
    COMMA           reduce using rule 44 (param -> type_spec IDENT SLBRAK SRBRAK .)
    RPAREN          reduce using rule 44 (param -> type_spec IDENT SLBRAK SRBRAK .)


state 30

    (46) compound_stmt -> LBRAK local_decls . stmt_list RBRAK
    (48) local_decls -> local_decls . local_decl
    (51) stmt_list -> . empty
    (52) stmt_list -> . stmt_list stmt
    (49) local_decl -> . type_spec IDENT SLBRAK SRBRAK SEMI
    (50) local_decl -> . type_spec IDENT SEMI
    (71) empty -> .
    (35) type_spec -> . FLOAT
    (36) type_spec -> . INT
    (37) type_spec -> . BOOL
    (38) type_spec -> . VOID
    RBRAK           reduce using rule 71 (empty -> .)
    BREAK           reduce using rule 71 (empty -> .)
    RETURN          reduce using rule 71 (empty -> .)
    WHILE           reduce using rule 71 (empty -> .)
    IF              reduce using rule 71 (empty -> .)
    LBRAK           reduce using rule 71 (empty -> .)
    SEMI            reduce using rule 71 (empty -> .)
    NEW             reduce using rule 71 (empty -> .)
    FLOAT_LIT       reduce using rule 71 (empty -> .)
    INT_LIT         reduce using rule 71 (empty -> .)
    BOOL_LIT        reduce using rule 71 (empty -> .)
    IDENT           reduce using rule 71 (empty -> .)
    LPAREN          reduce using rule 71 (empty -> .)
    PLUS            reduce using rule 71 (empty -> .)
    MINUS           reduce using rule 71 (empty -> .)
    NEG             reduce using rule 71 (empty -> .)
    FLOAT           shift and go to state 7
    INT             shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    stmt_list                      shift and go to state 32
    local_decl                     shift and go to state 33
    empty                          shift and go to state 34
    type_spec                      shift and go to state 35

state 31

    (47) local_decls -> empty .
    FLOAT           reduce using rule 47 (local_decls -> empty .)
    INT             reduce using rule 47 (local_decls -> empty .)
    BOOL            reduce using rule 47 (local_decls -> empty .)
    VOID            reduce using rule 47 (local_decls -> empty .)
    RBRAK           reduce using rule 47 (local_decls -> empty .)
    BREAK           reduce using rule 47 (local_decls -> empty .)
    RETURN          reduce using rule 47 (local_decls -> empty .)
    WHILE           reduce using rule 47 (local_decls -> empty .)
    IF              reduce using rule 47 (local_decls -> empty .)
    LBRAK           reduce using rule 47 (local_decls -> empty .)
    SEMI            reduce using rule 47 (local_decls -> empty .)
    NEW             reduce using rule 47 (local_decls -> empty .)
    FLOAT_LIT       reduce using rule 47 (local_decls -> empty .)
    INT_LIT         reduce using rule 47 (local_decls -> empty .)
    BOOL_LIT        reduce using rule 47 (local_decls -> empty .)
    IDENT           reduce using rule 47 (local_decls -> empty .)
    LPAREN          reduce using rule 47 (local_decls -> empty .)
    PLUS            reduce using rule 47 (local_decls -> empty .)
    MINUS           reduce using rule 47 (local_decls -> empty .)
    NEG             reduce using rule 47 (local_decls -> empty .)


state 32

    (46) compound_stmt -> LBRAK local_decls stmt_list . RBRAK
    (52) stmt_list -> stmt_list . stmt
    (53) stmt -> . break_stmt
    (54) stmt -> . return_stmt
    (55) stmt -> . while_stmt
    (56) stmt -> . if_stmt
    (57) stmt -> . compound_stmt
    (58) stmt -> . expr_stmt
    (66) break_stmt -> . BREAK SEMI
    (64) return_stmt -> . RETURN expr SEMI
    (65) return_stmt -> . RETURN SEMI
    (61) while_stmt -> . WHILE LPAREN expr RPAREN stmt
    (62) if_stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (63) if_stmt -> . IF LPAREN expr RPAREN stmt
    (46) compound_stmt -> . LBRAK local_decls stmt_list RBRAK
    (59) expr_stmt -> . SEMI
    (60) expr_stmt -> . expr SEMI
    (2) expr -> . NEW type_spec SLBRAK expr SRBRAK
    (3) expr -> . FLOAT_LIT
    (4) expr -> . INT_LIT
    (5) expr -> . BOOL_LIT
    (6) expr -> . IDENT POINT SIZE
    (7) expr -> . IDENT LPAREN args RPAREN
    (8) expr -> . IDENT SLBRAK expr SRBRAK
    (9) expr -> . IDENT
    (10) expr -> . LPAREN expr RPAREN
    (11) expr -> . expr MOD expr
    (12) expr -> . expr DIVIDE expr
    (13) expr -> . expr TIMES expr
    (14) expr -> . expr MINUS expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr GT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr LT expr
    (19) expr -> . expr LE expr
    (20) expr -> . expr NE expr
    (21) expr -> . expr EQ expr
    (22) expr -> . expr AND expr
    (23) expr -> . expr OR expr
    (24) expr -> . IDENT SLBRAK expr SRBRAK ASSIGN expr
    (25) expr -> . IDENT ASSIGN expr
    (26) expr -> . PLUS expr
    (27) expr -> . MINUS expr
    (28) expr -> . NEG expr
    RBRAK           shift and go to state 36
    BREAK           shift and go to state 44
    RETURN          shift and go to state 46
    WHILE           shift and go to state 48
    IF              shift and go to state 50
    LBRAK           shift and go to state 27
    SEMI            shift and go to state 45
    NEW             shift and go to state 51
    FLOAT_LIT       shift and go to state 52
    INT_LIT         shift and go to state 53
    BOOL_LIT        shift and go to state 54
    IDENT           shift and go to state 55
    LPAREN          shift and go to state 49
    PLUS            shift and go to state 57
    MINUS           shift and go to state 56
    NEG             shift and go to state 58

    stmt                           shift and go to state 37
    break_stmt                     shift and go to state 38
    return_stmt                    shift and go to state 39
    while_stmt                     shift and go to state 40
    if_stmt                        shift and go to state 41
    compound_stmt                  shift and go to state 42
    expr_stmt                      shift and go to state 43
    expr                           shift and go to state 47

state 33

    (48) local_decls -> local_decls local_decl .
    FLOAT           reduce using rule 48 (local_decls -> local_decls local_decl .)
    INT             reduce using rule 48 (local_decls -> local_decls local_decl .)
    BOOL            reduce using rule 48 (local_decls -> local_decls local_decl .)
    VOID            reduce using rule 48 (local_decls -> local_decls local_decl .)
    RBRAK           reduce using rule 48 (local_decls -> local_decls local_decl .)
    BREAK           reduce using rule 48 (local_decls -> local_decls local_decl .)
    RETURN          reduce using rule 48 (local_decls -> local_decls local_decl .)
    WHILE           reduce using rule 48 (local_decls -> local_decls local_decl .)
    IF              reduce using rule 48 (local_decls -> local_decls local_decl .)
    LBRAK           reduce using rule 48 (local_decls -> local_decls local_decl .)
    SEMI            reduce using rule 48 (local_decls -> local_decls local_decl .)
    NEW             reduce using rule 48 (local_decls -> local_decls local_decl .)
    FLOAT_LIT       reduce using rule 48 (local_decls -> local_decls local_decl .)
    INT_LIT         reduce using rule 48 (local_decls -> local_decls local_decl .)
    BOOL_LIT        reduce using rule 48 (local_decls -> local_decls local_decl .)
    IDENT           reduce using rule 48 (local_decls -> local_decls local_decl .)
    LPAREN          reduce using rule 48 (local_decls -> local_decls local_decl .)
    PLUS            reduce using rule 48 (local_decls -> local_decls local_decl .)
    MINUS           reduce using rule 48 (local_decls -> local_decls local_decl .)
    NEG             reduce using rule 48 (local_decls -> local_decls local_decl .)


state 34

    (51) stmt_list -> empty .
    RBRAK           reduce using rule 51 (stmt_list -> empty .)
    BREAK           reduce using rule 51 (stmt_list -> empty .)
    RETURN          reduce using rule 51 (stmt_list -> empty .)
    WHILE           reduce using rule 51 (stmt_list -> empty .)
    IF              reduce using rule 51 (stmt_list -> empty .)
    LBRAK           reduce using rule 51 (stmt_list -> empty .)
    SEMI            reduce using rule 51 (stmt_list -> empty .)
    NEW             reduce using rule 51 (stmt_list -> empty .)
    FLOAT_LIT       reduce using rule 51 (stmt_list -> empty .)
    INT_LIT         reduce using rule 51 (stmt_list -> empty .)
    BOOL_LIT        reduce using rule 51 (stmt_list -> empty .)
    IDENT           reduce using rule 51 (stmt_list -> empty .)
    LPAREN          reduce using rule 51 (stmt_list -> empty .)
    PLUS            reduce using rule 51 (stmt_list -> empty .)
    MINUS           reduce using rule 51 (stmt_list -> empty .)
    NEG             reduce using rule 51 (stmt_list -> empty .)


state 35

    (49) local_decl -> type_spec . IDENT SLBRAK SRBRAK SEMI
    (50) local_decl -> type_spec . IDENT SEMI
    IDENT           shift and go to state 59


state 36

    (46) compound_stmt -> LBRAK local_decls stmt_list RBRAK .
    FLOAT           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    INT             reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    BOOL            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    VOID            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    $end            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    RBRAK           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    BREAK           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    RETURN          reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    WHILE           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    IF              reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    LBRAK           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    SEMI            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    NEW             reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    FLOAT_LIT       reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    INT_LIT         reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    BOOL_LIT        reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    IDENT           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    LPAREN          reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    PLUS            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    MINUS           reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    NEG             reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)
    ELSE            reduce using rule 46 (compound_stmt -> LBRAK local_decls stmt_list RBRAK .)


state 37

    (52) stmt_list -> stmt_list stmt .
    RBRAK           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    BREAK           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    RETURN          reduce using rule 52 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 52 (stmt_list -> stmt_list stmt .)
    LBRAK           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    SEMI            reduce using rule 52 (stmt_list -> stmt_list stmt .)
    NEW             reduce using rule 52 (stmt_list -> stmt_list stmt .)
    FLOAT_LIT       reduce using rule 52 (stmt_list -> stmt_list stmt .)
    INT_LIT         reduce using rule 52 (stmt_list -> stmt_list stmt .)
    BOOL_LIT        reduce using rule 52 (stmt_list -> stmt_list stmt .)
    IDENT           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    LPAREN          reduce using rule 52 (stmt_list -> stmt_list stmt .)
    PLUS            reduce using rule 52 (stmt_list -> stmt_list stmt .)
    MINUS           reduce using rule 52 (stmt_list -> stmt_list stmt .)
    NEG             reduce using rule 52 (stmt_list -> stmt_list stmt .)


state 38

    (53) stmt -> break_stmt .
    RBRAK           reduce using rule 53 (stmt -> break_stmt .)
    BREAK           reduce using rule 53 (stmt -> break_stmt .)
    RETURN          reduce using rule 53 (stmt -> break_stmt .)
    WHILE           reduce using rule 53 (stmt -> break_stmt .)
    IF              reduce using rule 53 (stmt -> break_stmt .)
    LBRAK           reduce using rule 53 (stmt -> break_stmt .)
    SEMI            reduce using rule 53 (stmt -> break_stmt .)
    NEW             reduce using rule 53 (stmt -> break_stmt .)
    FLOAT_LIT       reduce using rule 53 (stmt -> break_stmt .)
    INT_LIT         reduce using rule 53 (stmt -> break_stmt .)
    BOOL_LIT        reduce using rule 53 (stmt -> break_stmt .)
    IDENT           reduce using rule 53 (stmt -> break_stmt .)
    LPAREN          reduce using rule 53 (stmt -> break_stmt .)
    PLUS            reduce using rule 53 (stmt -> break_stmt .)
    MINUS           reduce using rule 53 (stmt -> break_stmt .)
    NEG             reduce using rule 53 (stmt -> break_stmt .)
    ELSE            reduce using rule 53 (stmt -> break_stmt .)


state 39

    (54) stmt -> return_stmt .
    RBRAK           reduce using rule 54 (stmt -> return_stmt .)
    BREAK           reduce using rule 54 (stmt -> return_stmt .)
    RETURN          reduce using rule 54 (stmt -> return_stmt .)
    WHILE           reduce using rule 54 (stmt -> return_stmt .)
    IF              reduce using rule 54 (stmt -> return_stmt .)
    LBRAK           reduce using rule 54 (stmt -> return_stmt .)
    SEMI            reduce using rule 54 (stmt -> return_stmt .)
    NEW             reduce using rule 54 (stmt -> return_stmt .)
    FLOAT_LIT       reduce using rule 54 (stmt -> return_stmt .)
    INT_LIT         reduce using rule 54 (stmt -> return_stmt .)
    BOOL_LIT        reduce using rule 54 (stmt -> return_stmt .)
    IDENT           reduce using rule 54 (stmt -> return_stmt .)
    LPAREN          reduce using rule 54 (stmt -> return_stmt .)
    PLUS            reduce using rule 54 (stmt -> return_stmt .)
    MINUS           reduce using rule 54 (stmt -> return_stmt .)
    NEG             reduce using rule 54 (stmt -> return_stmt .)
    ELSE            reduce using rule 54 (stmt -> return_stmt .)


state 40

    (55) stmt -> while_stmt .
    RBRAK           reduce using rule 55 (stmt -> while_stmt .)
    BREAK           reduce using rule 55 (stmt -> while_stmt .)
    RETURN          reduce using rule 55 (stmt -> while_stmt .)
    WHILE           reduce using rule 55 (stmt -> while_stmt .)
    IF              reduce using rule 55 (stmt -> while_stmt .)
    LBRAK           reduce using rule 55 (stmt -> while_stmt .)
    SEMI            reduce using rule 55 (stmt -> while_stmt .)
    NEW             reduce using rule 55 (stmt -> while_stmt .)
    FLOAT_LIT       reduce using rule 55 (stmt -> while_stmt .)
    INT_LIT         reduce using rule 55 (stmt -> while_stmt .)
    BOOL_LIT        reduce using rule 55 (stmt -> while_stmt .)
    IDENT           reduce using rule 55 (stmt -> while_stmt .)
    LPAREN          reduce using rule 55 (stmt -> while_stmt .)
    PLUS            reduce using rule 55 (stmt -> while_stmt .)
    MINUS           reduce using rule 55 (stmt -> while_stmt .)
    NEG             reduce using rule 55 (stmt -> while_stmt .)
    ELSE            reduce using rule 55 (stmt -> while_stmt .)


state 41
